force-app/main/default/objects/Campaign/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <label>Campaign Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Swapcard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>