force-app/main/default/objects/Campaign/fields/Email_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Start_Date__c</fullName>
    <label>Email Start Date</label>
    <type>Date</type>
</CustomField>