force-app/main/default/objects/Campaign/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>