force-app/main/default/objects/Campaign/fields/Next_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Email_Date__c</fullName>
    <label>Next Email Date</label>
    <type>Date</type>
</CustomField>